@@ -4,6 +4,7 @@
 * Client: Fixed problem with calculating insanely high average fee (seen on testnet @ block 1256442)
 * Client: When fetching balance, download missging txs from www also for testnet
 * "lib/ltc" package moved to "lib/others/ltc"
+* Tools/Balio: Suports LTC and Testnet again
 
 1.9.3 - 2017-12-26
 * Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
